generator) version 1.0.53 and later.

New Features and Enhancements
-----------------------------

* Binary distributables
	* ARC HS toolchain now includes sysroot for -mcpu=hs38_linux.
	* New documentation site.

* Toolchain Build Scripts
	* Removed obsolete unsupported scripts.
	* macOS support.
	* Import documentation from wiki. Build it with Sphinx.

* GCC
	* Update to version 6.3.0.

* Binutils
	* Update to version 2.28.

* OpenOCD
	* Support Secure MPU registers.


Major Changes in 2016.09 Release
================================

Toolchain and IDE Components Versions
-------------------------------------

* Binutils 2.27+ (upstream commit decf5bd and ARC patches)
* GCC 6.2.1 (upstream commit e061fbe and ARC patches)
* GDB 7.12 (upstream commit 5f8cf6c and ARC patches)
* newlib 2.4 (upstream commit e6413b0 and ARC patches)
* uclibc-ng 1.0.17 (plus few ARC patches)
* Eclipse Mars (4.5.1) with CDT 8.8.0
* OpenOCD 0.9+ upstream commit 30203b3d8b, with ARC support.

This release of GNU toolchain and IDE is supported by CGEN IPlib (TCF
generator) version 1.0.53 and later.

GNU IDE 2016.09 will be supported in next embARC OSP release, planned for
January 2017.


New Features and Enhancements
-----------------------------

* Toolchain build scripts
    * Use GNU FTP server to download GMP, MPFR and MPC, update to latest
      versions of those libraries and download .tar.xz files of GMP and MPFR.
* GCC
    * Support -fstack-protector and -fstack-protector-all.
    * Remove support for -mabi option. Now GCC always generates function calls
      compatible with MetaWare compiler.
    * Avoid unnecessary dependency of libgcc on newlib.
* GDB
    * Support multi-target GDB in ARC code. GDB for baremetal targets now can
      debug Linux targets as well.
* uClibc
    * Migrated to uClibc-ng
* IDE
    * Migrated to use DSF instead of obsolete CDT for debugging, which brings
      in multiple usability enhancements.
    * Updated to latest version of TerminalView plugins.