@@ -1,0 +1,4 @@
+This is a MetaWare TCFtool which can be used to extract information from TCFs.
+Only binaries are provided, and they are copied into toolchain bin/ folder. As
+a result this tool is available only for Windows and macOS - no macOS and no
+non-x86 hosts.
